Fixed overflowing issues

--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -3,6 +3,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .outer-container {
   min-height: 100vh;
   display: grid;
